# CAT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Computer-Automation  Computer-Automation.cbp  Computer-Automation.layout  LICENSE  Makefile  Push  README.md  cmake_install.cmake  main.c  push.sh  test.script
include/: script.h  x11.h
src/: Win32.c  scanner.c  script.c  x11.c
